--- a/Index.html
+++ b/Index.html
@@ -109,14 +109,14 @@
 
 <section id="contact" class="contact">
     <h2>Contact Us</h2>
-    <p><strong>Phone:</strong> +1 234 567 890</p>
-    <p><strong>Email:</strong> coolfix@acrepair.com</p>
+    <p><strong>Phone:</strong> +917378930860</p>
+    <p><strong>Email:</strong> Mhdraiyankhan@gmail.com</p>
     <p><strong>Location:</strong> Your City, Your Country</p>
     <button>Book Service</button>
 </section>
 
 <footer>
-    <p>© 2026 CoolFix AC Repair. All Rights Reserved.</p>
+    <p>© 2026 A R AC INSTALLATION & REPAIR. All Rights Reserved.</p>
 </footer>
 
 </body>
@@ -160,13 +160,14 @@
 
 <div class="float-buttons">
     <!-- Call Button -->
-    <a href="tel:+1234567890" class="call-btn" title="Call Us">
+    <a href="tel:+917378930860" class="call-btn" title="Call Us">
         📞
     </a>
 
     <!-- WhatsApp Button -->
-    <a href="https://wa.me/1234567890" target="_blank" class="whatsapp-btn" title="WhatsApp Us">
+    <a href="https://wa.me/917378930860" target="_blank" class="whatsapp-btn" title="WhatsApp Us">
         💬
     </a>
 
 </div>
+
