--- a/index.html
+++ b/index.html
@@ -242,8 +242,7 @@ footer {
     <h3>Find Us on Google Maps</h3>
     <div class="map-container">
         <!-- Embed Google Map -->
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d100000!2d-73.935242!3d40.730610!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a1550dcbf43%3A0x4e2b3487c1c9db0b!2sNew%20York%2C%20NY!5e0!3m2!1sen!2sus!4v1631509659145!5m2!1sen!2sus"
-                width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://maps.app.goo.gl/1oLGerR2663AkZFN6                width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
 </section>
 
@@ -259,3 +258,4 @@ footer {
 
 </body>
 </html>
+
