--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ footer {
     <h3>Find Us on Google Maps</h3>
     <div class="map-container">
         <!-- Embed Google Map -->
-        <iframe src="https://maps.app.goo.gl/1oLGerR2663AkZFN6                width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3781.2255747677973!2d73.78480287519382!3d18.60892108250179!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTjCsDM2JzMyLjEiTiA3M8KwNDcnMTQuNiJF!5e0!3m2!1sen!2sin!4v1770200183040!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
 </section>
 
@@ -258,4 +258,5 @@ footer {
 
 </body>
 </html>
+
 
