--- a/index.html
+++ b/index.html
@@ -239,10 +239,11 @@ footer {
         <button type="submit">Submit Request</button>
     </form>
 
-    <h3>Find Us on Google Maps</h3>
+     <h3>Find Us on Google Maps</h3>
     <div class="map-container">
-        <!-- Embed Google Map -->
-        <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3781.2255747677973!2d73.78480287519382!3d18.60892108250179!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTjCsDM2JzMyLjEiTiA3M8KwNDcnMTQuNiJF!5e0!3m2!1sen!2sin!4v1770200183040!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <!-- Embed Google Map with your location -->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3781.2255747677973!2d73.78480287519382!3d18.60892108250179!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTjCsDM2JzMyLjEiTiA3M8KwNDcnMTQuNiJF!5e0!3m2!1sen!2sin!4v1770200183040!5m2!1sen!2sin" 
+            width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 </section>
 
@@ -258,5 +259,6 @@ footer {
 
 </body>
 </html>
+
 
 
